# SpotiFLAC-Module-Version

./: .env  .env.example  .gitignore  MANIFEST.in  README.md  SpotiFLAC.py  app.py  index.html  launcher.py  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml  docker-publish.yml
SpotiFLAC/: SpotiFLAC.py  __init__.py  amazonDL.py  app.js  app.py  check_update.py  downloader.py  getMetadata.py  index.html  interactive.py  launcher.py  qobuzDL.py  spotidownloaderDL.py  styles.css  tidalDL.py  youtubeDL.py
SpotiFLAC/core/: __init__.py  code_search.py  console.py  download_validation.py  endpoints.py  errors.py  ffmpeg_check.py  flac_validation.py  health_check.py  history.py  http.py  isrc_cache.py  isrc_finder.py  isrc_helper.py  isrc_utils.py  link_resolver.py  lyrics.py  metadata_enrichment.py  models.py  musicbrainz.py  profiles.py  progress.py  provider_stats.py  quality.py  session_memory.py  spotfetch.py  spotify_totp.py  tagger.py
SpotiFLAC/frontend/: app.js  styles.css  toast-system.js
SpotiFLAC/providers/: __init__.py  amazon.py  base.py  (+16 more)
backend/: app.py  launcher.py
frontend/: app.js  index.html  styles.css
spotiflac/: SpotiFLAC.py  launcher.py
tests/: conftest.py  test_base_provider.py  test_cancellation.py  test_download_output_path.py  test_env.py  test_instantiation.py  test_integration_scenarios.py  test_link_resolver.py  test_models.py  test_netease.py  test_output.py  test_provider_stats.py  test_providers.py  test_retry_logic.py  test_spotify_metadata.py  test_tidal_http.py  test_tidal_utils.py  test_url_validation.py
(+18 files in other folders)
