[build-system]
requires      = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "SpotiFLAC"
version     = "0.2.9"
description = "Download Spotify tracks in true FLAC from Tidal, Qobuz, and more — production-ready."
readme      = "README.md"
license     = { file = "LICENSE" }
requires-python = ">=3.10"

dependencies = [
    "requests>=2.31",
    "mutagen>=1.47",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "ruff", "mypy"]

[project.scripts]
spotiflac = "launcher:main"

[tool.ruff]
target-version = "py310"
line-length    = 100
select         = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
python_version         = "3.10"
strict                 = true
ignore_missing_imports = true
